--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cordova": "^5.3.3",
     "del": "^2.0.2",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.0.0",
     "gulp-changed": "^1.3.0",
     "gulp-main-bower-files": "^1.2.3",
     "gulp-stylus": "^2.1.0",
