--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "~1.4.7",
     "angular-material": "~0.11.4",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "material-design-iconic-font": "~2.1.2"
   }
 }
