--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-babel": "^6.0.0",
     "gulp-changed": "^1.3.0",
     "gulp-main-bower-files": "^1.2.3",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.1.0",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.14",
